--- a/app/views/devise/passwords/new.html.erb
+++ b/app/views/devise/passwords/new.html.erb
@@ -1,18 +1,18 @@
-<h2 class="text-center">Forgot your password?</h2>
+<h2 class= 'text-center'>Forgot your password?</h2>
 <div class='row'>
   <div class='col-md-12'>
 
-    <%= form_for(resource, as: resource_name, :html => {class: "form-    horizontal", role: "form"},
+    <%= form_for(resource, as: resource_name, :html => {class: "form-horizontal", role:"form"},
     url: password_path(resource_name), html: { method: :post }) do |f| %>
       <%= devise_error_messages! %>
 
     <div class="form-group">
-      <div class="control-label col-md-3">
-        <%= f.label :email %>
+      <div class="col-md-3 text-right">
+        <%= f.label :Email %>
       </div>
-      <div class="col-md-9">
+      <div class="col-md-6">
         <%= f.email_field :email, class: 'form-control',
-        autofocus: true %><br />
+        autofocus: true %> <br />
       </div>
     </div>
 
