--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -73,3 +73,17 @@ body {
   padding-left: 15px;
   font-style: italic;
 }
+
+.comment-body, .comment-time{
+  margin-left: 2am;
+}
+
+.commment-body {
+  font-size: x-large;
+}
+
+.comment-time {
+  font-style: italic;
+  font-size: large;
+}
+
